
2012-December-2 Struan Robertson

	* Miscellaneous changes following to fix Linux 64 bit compiler warnings
	and to update Linux 64 baselines.

2012-December-7 Chris Morley

	* src/CollisionOperator.cpp, src/CollisionOperator.h,src/System.cpp: XML
	output for "the average of the grain energy in each isomer" already output to
	ctest. 
	XML output is split a bit unhappily between CollisionOperator and
	System and if we keep adding additional outputs there may need to be a
	rationalisation.
	Enabled by <me:printGrainedSpeciesProfile/>. These tags need to be reviewed
	for consistency.
	The ctest code is not right - I will pass on to Dave.
	 
	* popDiag.xsl: graph of above.  

	* qd/include/qd/dd_real.h, qd/include/qd/qd_real.h: minor mods to reduce
	compilation warnings

2012-December-2 Struan Robertson

	* Main.cpp and Doc.: License updated to GPLv3.

	* SensitivityAnalysis.cpp: Template added.

2012-November-28 Chris Morley

	src/plugin.h: Add TopPlugin as parent of plugins. Provides:
	- case and whitespace insensitivity of plugin names in the input file;
	- listing of plugins from the command line:  mesmer -t  or mesmer -T ;
	   The latter displays Descriptions of the type or the plugin if present
	   (currently only in EnergyTransferModel and ExponentialDown).
	- error message with a list of the possibilities if an unrecognized
	   plugin name supplied.
	- registration of all plugins, rather than being done in type classes;
	* Changes to housekeeping of all plugin classes
	* src/plugins/simplecalc.cpp, src/System.cpp, src/System.h: take advantage of
	  new error messages (more to be done).

	* MesmerQA/pentyl/pentyl_isomerization_test.xml: Use me:derivedFrom attribute
	to provide a test of it.

	* src/MolecularComponents.cpp, MesmerQA/UnitTests/UnitTests.xml: re-introduce
	"thermodynamic" energy convention. When used with Hf298 input prevents an
	unnecessary conversion to the "computational" convention and reduces error
	messages in UnitTests.
